# artifacts/api-server/src/routes/index.ts
@@ -9,8 +9,8 @@ import fallRouter from "./fall";
 import vitalRouter from "./vital";
 import physicianRouter from "./physician";
 import communicationBinderRouter from "./communicationBinder";
-import faxDirectoryRouter from "./faxDirectory";
-import faxLogsRouter from "./faxLogs";
+import contactDirectoryRouter from "./contactDirectory";
+import communicationLogsRouter from "./communicationLogs";
 
 const router: IRouter = Router();
 
@@ -24,7 +24,7 @@ router.use(fallRouter);
 router.use(vitalRouter);
 router.use(physicianRouter);
 router.use(communicationBinderRouter);
-router.use(faxDirectoryRouter);
-router.use(faxLogsRouter);
+router.use(contactDirectoryRouter);
+router.use(communicationLogsRouter);
 
 export default router;
